@@ -1,3 +1,9 @@
+icmake (7.21.02) ISN
+
+  *	`icmstart dir library' uncomments the library construction spec. and
+	comments out the main.cc spec. in icmconf
+
+
 icmake (7.21.01)
 
   * By default, ./icm_bootstrap no longer specifies -g when compiling icmake's
